# polymarket-bot

./: .env.example  .gitignore  Agent_Brotherhood_Sheet.html  close_positions.py  report.py  requirements.txt  setup.sh
arbiter/: __init__.py  __main__.py  analyzer.py  config.py  executor.py  main.py  scanner.py  tracker.py
bot/: atlas_feed.py  auth.py  auto_claimer.py  backtest.py  bankroll.py  binance_feed.py  brain_interpreter.py  brain_reader.py  chainlink_feed.py  coinglass.py  config.py  conviction.py  daily_cycle.py  dashboard.py  defi_data.py  derivatives_feed.py  edge_monitor.py  execution.py  general_maker.py  http_session.py  indicators.py  kalshi_client.py  live_dashboard.py  lstm_predictor.py  macro.py  main.py  maker_engine.py  market_discovery.py  market_quality.py  mempool.py  ml_predictor.py  momentum.py  news_feed.py  orderbook_check.py  param_loader.py  pattern_gate.py  performance_monitor.py  poly_flow.py  post_trade_analyzer.py  price_cache.py  (+15 more)
data/: agents-registry.json  atlas_param_suggestions.json  atlas_research_brief.json  binance_status.json  brand_channel.json  broadcast.json  brotherhood_pnl.json  clob_status.json  daily_reports.json  decision_ids.json  derivatives_state.json  diagnostics.json  discord_vision_count.json  external_data_state.json  hawk_arb_status.json  hawk_briefing.json  (+80 more)
killshot/executor/: Cargo.toml  com.killshot.executor.plist
killshot/executor/src/: auth.rs  clob.rs  config.rs  handler.rs  main.rs  order.rs
killshot/rust-executor/: Cargo.toml
killshot/rust-executor/src/: config.rs  executor.rs  main.rs  types.rs
(+362 files in other folders)
