[package]
name = "killshot-executor"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
alloy-primitives = "0.8"
alloy-signer = "0.8"
alloy-signer-local = "0.8"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"
hex = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
